--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ ul{
   margin-top: 60px;
   width: 800px;
   line-height: 1px;
-  margin-bottom: 15px;
+  margin-bottom: 45px;
 }
 #header .site-title a {
   display: block;
@@ -121,10 +121,16 @@ ul{
 #detail .text .link{
   color: #333;
 }
+/* footer */
+#footer{
+  font-size: 0.625rem;
+  padding: 15px 0;
+  text-align: center;
+}
 
 
 @media screen and (max-width: 1024px) {
-  /* .inner{
+  .inner{
     padding: 0 20px;
   }
   #header{
@@ -155,5 +161,5 @@ ul{
   #detail .text {
     width: 100%;
     padding: 40px 0 0 0;
-  } */
+  }
 }
